force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/CommercientSF__SYSPRO7_InvoiceDetail__c.object-meta.xml
<CustomObject>
    <label>Syspro Invoice Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Invoice Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>