force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__AbcUpd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AbcUpd__c</fullName>
    <description>AbcUpd</description>
    <label>Abcupd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>