force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__AccountConvRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AccountConvRate__c</fullName>
    <description>AccountConvRate</description>
    <label>Accountconvrate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>