force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__AccountCur__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AccountCur__c</fullName>
    <description>AccountCur</description>
    <label>Accountcur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>