force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__AccountMulDiv__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AccountMulDiv__c</fullName>
    <description>AccountMulDiv</description>
    <label>Accountmuldiv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>