force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__Bin__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Bin__c</fullName>
    <description>Bin</description>
    <label>Bin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>