force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__BuyingGroup__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BuyingGroup__c</fullName>
    <description>BuyingGroup</description>
    <label>Buyinggroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>