force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__ContractPrcNum__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ContractPrcNum__c</fullName>
    <description>ContractPrcNum</description>
    <label>Contractprcnum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>