force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__ControlType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ControlType__c</fullName>
    <description>ControlType</description>
    <label>Controltype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>