force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__CostGlCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CostGlCode__c</fullName>
    <description>CostGlCode</description>
    <label>Costglcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>