force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__CostValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CostValue__c</fullName>
    <description>CostValue</description>
    <label>Costvalue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>