force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__CstAnalysisEntry__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CstAnalysisEntry__c</fullName>
    <description>CstAnalysisEntry</description>
    <label>Cstanalysisentry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>