force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__CustomerClass__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CustomerClass__c</fullName>
    <description>CustomerClass</description>
    <label>Customerclass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>