force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__CustomerPoNumber__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CustomerPoNumber__c</fullName>
    <description>CustomerPoNumber</description>
    <label>Customerponumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>