force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__DetailLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DetailLine__c</fullName>
    <description>DetailLine</description>
    <label>Detailline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>