force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__DiscountGlCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DiscountGlCode__c</fullName>
    <description>DiscountGlCode</description>
    <label>Discountglcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>