force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__DiscValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DiscValue__c</fullName>
    <description>DiscValue</description>
    <label>Discvalue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>