force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__DscAnalysisEntry__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DscAnalysisEntry__c</fullName>
    <description>DscAnalysisEntry</description>
    <label>Dscanalysisentry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>