force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__EecInvoiceFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__EecInvoiceFlag__c</fullName>
    <description>EecInvoiceFlag</description>
    <label>Eecinvoiceflag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>