force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__GlDistrUpd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlDistrUpd__c</fullName>
    <description>GlDistrUpd</description>
    <label>Gldistrupd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>