force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__GlIntPeriod__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlIntPeriod__c</fullName>
    <description>GlIntPeriod</description>
    <label>Glintperiod</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>