force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__GlIntPrinted__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlIntPrinted__c</fullName>
    <description>GlIntPrinted</description>
    <label>Glintprinted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>