force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__GlIntUpdated__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlIntUpdated__c</fullName>
    <description>GlIntUpdated</description>
    <label>Glintupdated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>