force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__GlIntYear__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlIntYear__c</fullName>
    <description>GlIntYear</description>
    <label>Glintyear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>