force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__GlJournal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlJournal__c</fullName>
    <description>GlJournal</description>
    <label>Gljournal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>