force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__GlPeriod__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlPeriod__c</fullName>
    <description>GlPeriod</description>
    <label>Glperiod</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>