force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__GlYear__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlYear__c</fullName>
    <description>GlYear</description>
    <label>Glyear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>