force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__HistoryReqd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__HistoryReqd__c</fullName>
    <description>HistoryReqd</description>
    <label>Historyreqd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>