force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__LineInvoiceDisc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LineInvoiceDisc__c</fullName>
    <description>LineInvoiceDisc</description>
    <label>Lineinvoicedisc</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>