force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__LineType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LineType__c</fullName>
    <description>LineType</description>
    <label>Linetype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>