force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__Mass__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Mass__c</fullName>
    <description>Mass</description>
    <label>Mass</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>