force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__NetSalesValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NetSalesValue__c</fullName>
    <description>NetSalesValue</description>
    <label>Netsalesvalue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>