force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__PostConvRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PostConvRate__c</fullName>
    <description>PostConvRate</description>
    <label>Postconvrate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>