force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__PostCurrency__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PostCurrency__c</fullName>
    <description>PostCurrency</description>
    <label>Postcurrency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>