force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__PostMulDiv__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PostMulDiv__c</fullName>
    <description>PostMulDiv</description>
    <label>Postmuldiv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>