force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__PostValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PostValue__c</fullName>
    <description>PostValue</description>
    <label>Postvalue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>