force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__PriceCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PriceCode__c</fullName>
    <description>PriceCode</description>
    <label>Pricecode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>