force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__ProductClass__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ProductClass__c</fullName>
    <description>ProductClass</description>
    <label>Productclass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>