force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__ProductClassUpd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ProductClassUpd__c</fullName>
    <description>ProductClassUpd</description>
    <label>Productclassupd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>