force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__QtyInvoiced__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__QtyInvoiced__c</fullName>
    <description>QtyInvoiced</description>
    <label>Qtyinvoiced</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>