force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__Register__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Register__c</fullName>
    <description>Register</description>
    <label>Register</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>