force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>CommercientSF__SorMasterRep__c</referenceTo>
    <relationshipName>Syspro_Invoicedetails</relationshipName>
    <type>Lookup</type>
</CustomField>