force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__Sales_Order_Detail_Line__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Sales_Order_Detail_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Detail Line</label>
    <referenceTo>CommercientSF__SorDetailRep__c</referenceTo>
    <relationshipName>Syspro_Invoicedetails</relationshipName>
    <type>Lookup</type>
</CustomField>