force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__SalesGlIntReqd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesGlIntReqd__c</fullName>
    <description>SalesGlIntReqd</description>
    <label>Salesglintreqd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>