force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__SalesOrderLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesOrderLine__c</fullName>
    <description>SalesOrderLine</description>
    <label>Salesorderline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>