force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__SalespersonUpd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalespersonUpd__c</fullName>
    <description>SalespersonUpd</description>
    <label>Salespersonupd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>