force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__StockUpd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StockUpd__c</fullName>
    <description>StockUpd</description>
    <label>Stockupd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>