force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__SummaryLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SummaryLine__c</fullName>
    <description>SummaryLine</description>
    <label>Summaryline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>