force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__Syspro_Customer_Record__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Syspro_Customer_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Customer Record</label>
    <referenceTo>CommercientSF__ArCustomer__c</referenceTo>
    <relationshipName>Syspro_Invoicedetails</relationshipName>
    <type>Lookup</type>
</CustomField>