force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__Syspro_Inventory_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Syspro_Inventory_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Warehouse</label>
    <referenceTo>CommercientSF__InvWarehouse__c</referenceTo>
    <relationshipName>Syspro_Invoicedetails</relationshipName>
    <type>Lookup</type>
</CustomField>