force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__Syspro_Invoice__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Syspro_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Invoice</label>
    <referenceTo>CommercientSF__ArInvoice__c</referenceTo>
    <relationshipName>Syspro_Invoicedetails</relationshipName>
    <type>Lookup</type>
</CustomField>