force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__TaxableValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxableValue__c</fullName>
    <description>TaxableValue</description>
    <label>Taxablevalue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>