force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__TaxCodeFst__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxCodeFst__c</fullName>
    <description>TaxCodeFst</description>
    <label>Taxcodefst</label>
    <length>255</length>
    <type>Text</type>
</CustomField>