force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__TaxStatus__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxStatus__c</fullName>
    <description>TaxStatus</description>
    <label>Taxstatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>