force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__TaxValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxValue__c</fullName>
    <description>TaxValue</description>
    <label>Taxvalue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>