force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__TaxValueFst__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxValueFst__c</fullName>
    <description>TaxValueFst</description>
    <label>Taxvaluefst</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>