force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__TranAnalysisEntry__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TranAnalysisEntry__c</fullName>
    <description>TranAnalysisEntry</description>
    <label>Trananalysisentry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>