force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__TransactionGlCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TransactionGlCode__c</fullName>
    <description>TransactionGlCode</description>
    <label>Transactionglcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>