force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__TriangConvRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TriangConvRate__c</fullName>
    <description>TriangConvRate</description>
    <label>Triangconvrate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>