force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__TriangCurrency__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TriangCurrency__c</fullName>
    <description>TriangCurrency</description>
    <label>Triangcurrency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>