force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__TriangMulDiv__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TriangMulDiv__c</fullName>
    <description>TriangMulDiv</description>
    <label>Triangmuldiv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>