force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__TrnMonth__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrnMonth__c</fullName>
    <description>TrnMonth</description>
    <label>Trnmonth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>