force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__TrnYear__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrnYear__c</fullName>
    <description>TrnYear</description>
    <label>Trnyear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>