force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__UserField1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__UserField1__c</fullName>
    <description>UserField1</description>
    <label>Userfield1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>