force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__UserField2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__UserField2__c</fullName>
    <description>UserField2</description>
    <label>Userfield2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>