force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__Usr_TAT__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Usr_TAT__c</fullName>
    <description>Usr_TAT</description>
    <label>Usr tat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>