force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__Version__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Version__c</fullName>
    <description>Version</description>
    <label>Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>