force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__Volume__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Volume__c</fullName>
    <description>Volume</description>
    <label>Volume</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>