force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/fields/CommercientSF__WhAnalysisEntry__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__WhAnalysisEntry__c</fullName>
    <description>WhAnalysisEntry</description>
    <label>Whanalysisentry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>