force-app/main/default/objects/CommercientSF__SYSPRO7_InvoiceDetail__c/listViews/CommercientSF__All.listView-meta.xml
<ListView>
    <fullName>CommercientSF__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>